1. Made changes to the error message when entering incorrect phone number 2. Made a recursive loop in the search bar to find the cancel button and translate the text to Hebrew. 3. Translated Done button in image view for publication (in Storyboard).

--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -931,7 +931,7 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" id="DkS-KZ-6DQ">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="lWx-p4-UgB">
+                        <barButtonItem key="rightBarButtonItem" title="סיום" id="lWx-p4-UgB">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="dissmiss" destination="6Rt-Iu-LwM" id="zg8-Vn-42H"/>
