--- a/FoodCollector/FCActivityCenterTVSectionHeader.xib
+++ b/FoodCollector/FCActivityCenterTVSectionHeader.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -16,17 +16,17 @@
                     <color key="backgroundColor" red="0.29803922772407532" green="0.29803922772407532" blue="0.29803922772407532" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NoPhoto-Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="fcQ-ic-icR">
-                    <rect key="frame" x="532" y="15" width="50" height="50"/>
+                <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NoPhotoPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="fcQ-ic-icR">
+                    <rect key="frame" x="540" y="22" width="35" height="35"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="Dhy-re-rOY"/>
-                        <constraint firstAttribute="width" constant="50" id="E0m-zU-MXy"/>
+                        <constraint firstAttribute="height" constant="35" id="Dhy-re-rOY"/>
+                        <constraint firstAttribute="width" constant="35" id="E0m-zU-MXy"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rs4-0y-2GW">
-                    <rect key="frame" x="8" y="30" width="516" height="19"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="748" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rs4-0y-2GW">
+                    <rect key="frame" x="8" y="30" width="524" height="19"/>
                     <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="17"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
@@ -35,18 +35,23 @@
                 <constraint firstItem="9sI-xM-EMM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="1v3-SD-rId"/>
                 <constraint firstItem="Rs4-0y-2GW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="30" id="2Ta-MT-zGF"/>
                 <constraint firstItem="Rs4-0y-2GW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="3q8-tu-bac"/>
-                <constraint firstAttribute="trailing" secondItem="fcQ-ic-icR" secondAttribute="trailing" constant="18" id="5YZ-z8-Iv8"/>
+                <constraint firstAttribute="trailing" secondItem="fcQ-ic-icR" secondAttribute="trailing" constant="25" id="5YZ-z8-Iv8"/>
                 <constraint firstItem="9sI-xM-EMM" firstAttribute="centerY" secondItem="fcQ-ic-icR" secondAttribute="centerY" id="RgK-6j-cyb"/>
                 <constraint firstItem="9sI-xM-EMM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="W3M-nW-rla"/>
                 <constraint firstItem="fcQ-ic-icR" firstAttribute="leading" secondItem="Rs4-0y-2GW" secondAttribute="trailing" constant="8" symbolic="YES" id="fhI-1B-EAZ"/>
                 <constraint firstItem="9sI-xM-EMM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="jU3-Vh-QEE"/>
-                <constraint firstItem="fcQ-ic-icR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="ook-pL-jOO"/>
+                <constraint firstItem="fcQ-ic-icR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="22" id="ook-pL-jOO"/>
                 <constraint firstItem="fcQ-ic-icR" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="v0F-tf-dMG"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="ook-pL-jOO"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="blackBackgroundView" destination="9sI-xM-EMM" id="Ktd-ui-OFV"/>
                 <outlet property="iconImageView" destination="fcQ-ic-icR" id="zeX-Ui-otW"/>
@@ -55,6 +60,6 @@
         </view>
     </objects>
     <resources>
-        <image name="NoPhoto-Placeholder" width="88" height="88"/>
+        <image name="NoPhotoPlaceholder" width="87" height="80"/>
     </resources>
 </document>
